--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,16 +6,16 @@
         android:id="@+id/settings"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="settings"/>
+        android:title="カーソル設定"/>
     <item
         android:id="@+id/remove"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="remove"/>
+        android:title="タブ削除"/>
     <item
         android:id="@+id/create"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="create"/>
+        android:title="新しいタブ"/>
 
 </menu>
