--- a/res/layout/fragment0.xml
+++ b/res/layout/fragment0.xml
@@ -4,30 +4,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <EditText
-        android:id="@+id/form"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="URL or search word "
-        android:imeOptions="actionSearch"
-        android:singleLine="true" />
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/form"
-        android:max="100"
-        android:progress="0"
-        android:visibility="invisible" />
+        <EditText
+            android:id="@+id/form"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="URL or search word "
+            android:imeOptions="actionSearch"
+            android:singleLine="true"/>
 
-    <WebView
-        android:id="@+id/webview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/progress_bar" >
-    </WebView>
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="100"
+            android:progress="0" />
+
+        <WebView
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <requestFocus />
+        </WebView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
