--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,16 +3,20 @@
     tools:context="com.tona.mousebrowther.MainActivity" >
 
     <item
+        android:id="@+id/reload"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="更新"/>
+    <item
         android:id="@+id/general_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="一般設定"/>
-     <item
+    <item
         android:id="@+id/cursor_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="カーソル設定"/>
-
     <item
         android:id="@+id/remove"
         android:orderInCategory="100"
@@ -23,6 +27,5 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="新しいタブ"/>
-
 
 </menu>
