--- a/res/layout/fragment0.xml
+++ b/res/layout/fragment0.xml
@@ -46,7 +46,7 @@
             android:layout_weight="1"
             android:alpha="0.10"
             android:background="#FFFF00"
-            android:visibility="invisible" />
+            android:visibility="gone" />
 
         <View
             android:id="@+id/view_right"
@@ -55,7 +55,7 @@
             android:layout_weight="1"
             android:alpha="0.10"
             android:background="#FFFF00"
-            android:visibility="invisible" />
+            android:visibility="gone" />
     </LinearLayout>
 
     <View
@@ -65,7 +65,7 @@
         android:layout_alignParentBottom="true"
         android:alpha="0.10"
         android:background="#FFFF00"
-        android:visibility="invisible" />
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/layout_button"
@@ -79,14 +79,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="OFF" />
-
-        <Button
-            android:id="@+id/btn_click"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/btn_enable"
-            android:text="click"
-            android:visibility="invisible" />
     </RelativeLayout>
 
 </RelativeLayout>
