--- a/res/layout/fragment0.xml
+++ b/res/layout/fragment0.xml
@@ -15,7 +15,8 @@
             android:layout_height="wrap_content"
             android:hint="URL or search word "
             android:imeOptions="actionSearch"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:visibility="gone" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
